# xmms-syncup

./: Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  syncup.c
