dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)

AC_INIT(syncup.c)
AC_CANONICAL_TARGET([])
AM_INIT_AUTOMAKE(xmms-syncup, 0.9.1)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC

AC_PROG_CC
AC_PROG_CPP
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_PATH_X

AM_PATH_GLIB(1.2.2,,AC_MSG_ERROR([*** GLIB >= 1.2.2 not installed - please install first ***]))
AM_PATH_XMMS(1.2.4,,AC_MSG_ERROR([*** XMMS >= 1.2.4 not installed - please install first ***]))
AM_PATH_GTK(1.2.2,,AC_MSG_ERROR([*** GTK+ >= 1.2.2 not installed - please install first ***]),gthread)

LIBS_save=$LIBS
LIBS="$LIBS $GTK_LIBS"

MATHLIB="-lm"
AC_PATH_X
AC_PATH_XTRA

AC_OUTPUT(Makefile)
